[package]
name = "win-crypto-ng"
version = "0.1.1"
authors = ["Émile Grégoire <eg@emilegregoire.ca>"]
edition = "2018"
description = "Safe bindings to Windows Cryptography API: Next Generation"
repository = "https://github.com/emgre/win-crypto-ng"
documentation = "https://docs.rs/crate/win-crypto-ng"
readme = "README.md"
keywords = ["cng", "windows", "cryptoapi"]
categories = ["api-bindings", "os::windows-apis", "cryptography"]
license = "BSD-3-Clause"

[badges]
maintenance = { status = "experimental" }

[dependencies]
winapi = { version = "0.3", features = ["bcrypt", "ntstatus"] }
zeroize = { version = "1.1", optional = true }
doc-comment = "0.3"

[dev-dependencies]
doc-comment = "0.3"

[features]
default = ["zeroize"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"