[package]
name = "win-crypto-ng"
version = "0.2.1"
authors = ["Émile Grégoire <eg@emilegregoire.ca>", "Igor Matuszewski <Xanewok@gmail.com>"]
edition = "2018"
description = "Safe bindings to Windows Cryptography API: Next Generation"
repository = "https://github.com/emgre/win-crypto-ng"
documentation = "https://docs.rs/crate/win-crypto-ng"
readme = "README.md"
keywords = ["cng", "windows", "cryptoapi"]
categories = ["api-bindings", "os::windows-apis", "cryptography"]
license = "BSD-3-Clause"

[badges]
maintenance = { status = "experimental" }

[dependencies]
winapi = { version = "0.3", features = ["bcrypt", "ntstatus", "winerror"] }
zeroize = { version = "1.1", optional = true }
rand_core = { version = "0.5", optional = true }
block-cipher = { version = "0.8", optional = true }
doc-comment = "0.3"

[dev-dependencies]
doc-comment = "0.3"

[features]
default = ["zeroize"]
rand = ["rand_core"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"